--- a/ticTac.html
+++ b/ticTac.html
@@ -22,15 +22,15 @@
     <div id="score-box">
       <div id="one-box">
         <div class="player-name" id="name-one">Player 1</div>
-        <div class="player-score active"id="score-one">0</div>
+        <div class="player-0-panel active"id="score-zero">0</div>
       </div>
       <div id="two-box">
         <div class="player-name"id="name-two">Player 2</div>
-        <div class="player-score"id="score-two">0</div>
+        <div class="player-1-panel-"id="score-one">0</div>
       </div>
     </div>
     <div class="winning" id="winning-message">
-      <div data-winning-text>0</div> 
+      <div data-winning-text>0</div>
     </div>
 
 
