--- a/ticTac.html
+++ b/ticTac.html
@@ -8,25 +8,25 @@
   <body>
     <h1>TIC-TAC-HOE</h1>
     <div class="grid-container">
-      <button class="cell" data-cell>0</button>
-      <button class="cell" data-cell>1</button>
-      <button class="cell" data-cell>2</button>
-      <button class="cell" data-cell>3</button>
-      <button class="cell" data-cell>4</button>
-      <button class="cell" data-cell>5</button>
-      <button class="cell" data-cell>6</button>
-      <button class="cell" data-cell>7</button>
-      <button class="cell" data-cell>8</button>
+      <button id="0"class="cell" data-cell>0</button>
+      <button id="1"class="cell" data-cell>1</button>
+      <button id="2"class="cell" data-cell>2</button>
+      <button id="3"class="cell" data-cell>3</button>
+      <button id="4"class="cell" data-cell>4</button>
+      <button id="5"class="cell" data-cell>5</button>
+      <button id="6"class="cell" data-cell>6</button>
+      <button id="7"class="cell" data-cell>7</button>
+      <button id="8"class="cell" data-cell>8</button>
     </div>
 
     <div id="score-box">
       <div id="one-box">
         <div class="player-name" id="name-one">Player 1</div>
-        <div class="player-0-panel active"id="score-zero">0</div>
+        <div class="playerRed-active"id="zero"></div>
       </div>
       <div id="two-box">
         <div class="player-name"id="name-two">Player 2</div>
-        <div class="player-1-panel-"id="score-one">0</div>
+        <div class="playerBlue-"id="one"></div>
       </div>
     </div>
     <div class="winning" id="winning-message">
@@ -34,7 +34,7 @@
     </div>
 
 
-     <script type="text/javascript" src="ticTac.js"></script>
+     <script type="text/javascript" src="tictactoe.js"></script>
 
   </body>
 
