added turn counter

--- a/ticTac.html
+++ b/ticTac.html
@@ -21,16 +21,17 @@
 
     <div id="score-box">
       <div id="one-box">
-        <div class="player-name" id="name-one">Player 1</div>
+        <div class="player-name" id="name-one">Player O</div>
         <div class="playerRed-active"id="zero"></div>
       </div>
       <div id="two-box">
-        <div class="player-name"id="name-two">Player 2</div>
+        <div class="player-name"id="name-two">Player X</div>
         <div class="playerBlue-"id="one"></div>
       </div>
     </div>
-    <div class="winning" id="winning-message">
-      <div data-winning-text>0</div>
+    <div class="counting" id="winning-message">
+      <div id="counter-1">0</div>
+      <div id="counter-2">0</div>
     </div>
 
 
