added check arrX

--- a/ticTac.html
+++ b/ticTac.html
@@ -8,15 +8,15 @@
   <body>
     <h1>TIC-TAC-HOE</h1>
     <div class="grid-container">
-      <button id="0"class="cell" data-cell>0</button>
-      <button id="1"class="cell" data-cell>1</button>
-      <button id="2"class="cell" data-cell>2</button>
-      <button id="3"class="cell" data-cell>3</button>
-      <button id="4"class="cell" data-cell>4</button>
-      <button id="5"class="cell" data-cell>5</button>
-      <button id="6"class="cell" data-cell>6</button>
-      <button id="7"class="cell" data-cell>7</button>
-      <button id="8"class="cell" data-cell>8</button>
+      <button id="0"class="cell" data-cell></button>
+      <button id="1"class="cell" data-cell></button>
+      <button id="2"class="cell" data-cell></button>
+      <button id="3"class="cell" data-cell></button>
+      <button id="4"class="cell" data-cell></button>
+      <button id="5"class="cell" data-cell></button>
+      <button id="6"class="cell" data-cell></button>
+      <button id="7"class="cell" data-cell></button>
+      <button id="8"class="cell" data-cell></button>
     </div>
 
     <div id="score-box">
